# WeChat_universal_connection

./: README.md  main.py  pyproject.toml  test_send_hello.py
docs/: api_reference.md  development.md  ilink_protocol.md  mcp_tools.md
wechat_mcp/: __init__.py  ilink_client.py  main.py  mcp_server.py
